--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "firebase": "^12.0.0",
     "firebase-admin": "^13.4.0",
     "formidable": "^3.5.4",
+    "lucide-react": "^0.525.0",
     "next": "15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sweetalert2": "^11.22.2",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
