--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
+    "firebase": "^12.0.0",
     "next": "15.4.2",
     "postcss": "^8.5.6",
     "react": "19.1.0",
