--- a/package.json
+++ b/package.json
@@ -9,28 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.2.1",
-    "@types/js-cookie": "^3.0.6",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cookies-next": "^6.1.0",
-    "firebase": "^12.0.0",
-    "firebase-admin": "^13.4.0",
-    "js-cookie": "^3.0.5",
+    "autoprefixer": "^10.4.21",
     "next": "15.4.2",
+    "postcss": "^8.5.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-hook-form": "^7.61.1",
-    "zod": "^4.0.13"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@tailwindcss/cli": "^4.1.11",
-    "@tailwindcss/postcss": "^4.1.11",
-    "@types/node": "^20.19.9",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
     "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
