--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/genai": "^1.12.0",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.2.1",
     "@imagekit/next": "^2.1.2",
     "@types/js-cookie": "^3.0.6",
@@ -18,12 +20,22 @@
     "firebase": "^12.0.0",
     "firebase-admin": "^13.4.0",
     "formidable": "^3.5.4",
+    "google-translate": "^3.0.0",
+    "i18next": "^25.3.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
+    "next-i18next": "^15.4.2",
+    "next-international": "^1.3.1",
+    "nookies": "^2.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hook-form": "^7.61.1",
+    "react-hook-form": "^7.62.0",
+    "react-i18next": "^15.6.1",
+    "react-markdown": "^10.1.0",
+    "react-quill": "^2.0.0",
+    "remark-gfm": "^4.0.1",
+    "sanitize-html": "^2.17.0",
     "sweetalert2": "^11.22.2",
     "uuid": "^11.1.0",
     "zod": "^4.0.13"
