--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@google/genai": "^1.12.0",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.2.1",
@@ -37,6 +38,7 @@
     "remark-gfm": "^4.0.1",
     "sanitize-html": "^2.17.0",
     "sweetalert2": "^11.22.2",
+    "sweetalert2-react-content": "^5.1.0",
     "uuid": "^11.1.0",
     "zod": "^4.0.13"
   },
