--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "google-translate": "^3.0.0",
     "i18next": "^25.3.2",
     "js-cookie": "^3.0.5",
+    "lightningcss": "^1.30.1",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
     "next-i18next": "^15.4.2",
