--- a/package.json
+++ b/package.json
@@ -9,25 +9,49 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@google/genai": "^1.12.0",
+    "@google/generative-ai": "^0.24.1",
+    "@hookform/resolvers": "^5.2.1",
     "@imagekit/next": "^2.1.2",
+    "@types/js-cookie": "^3.0.6",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cookies-next": "^6.1.0",
     "firebase": "^12.0.0",
     "firebase-admin": "^13.4.0",
     "formidable": "^3.5.4",
+    "google-translate": "^3.0.0",
+    "i18next": "^25.3.2",
+    "js-cookie": "^3.0.5",
+    "lightningcss": "^1.30.1",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
+    "next-i18next": "^15.4.2",
+    "next-international": "^1.3.1",
+    "nookies": "^2.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
+    "react-i18next": "^15.6.1",
+    "react-markdown": "^10.1.0",
+    "react-quill": "^2.0.0",
+    "remark-gfm": "^4.0.1",
+    "sanitize-html": "^2.17.0",
     "sweetalert2": "^11.22.2",
-    "uuid": "^11.1.0"
+    "sweetalert2-react-content": "^5.1.0",
+    "uuid": "^11.1.0",
+    "zod": "^4.0.13"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/formidable": "^3.4.5",
-    "@types/node": "^20.19.9",
+    "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5"
   }
 }
